[project]
name = "iden-channel-calculator"
description = "A simple Project 25 iDEN channel information calculator"
authors = [{ name = "K4YT3X", email = "i@k4yt3x.com" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/k4yt3x/iden-channel-calculator"

[project.scripts]
iden-channel-calculator = "iden_channel_calculator:main"

[tool.isort]
profile = "black"

[tool.pdm]
version = { from = "iden_channel_calculator/__init__.py" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
